Feature: Implement change password functionality

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
         {% if 'user_id' in session %}
             <div class="navbar-menu">
                 <span class="navbar-item">Usuario: {{ session['username'] }} ({{ session['user_role'] }})</span>
+                <a href="{{ url_for('change_password') }}" class="navbar-item">Cambiar Contraseña</a>
                 <a href="{{ url_for('logout') }}" class="navbar-item">Cerrar Sesión</a>
             </div>
         {% endif %}
