--- a/templates/sellers.html
+++ b/templates/sellers.html
@@ -29,7 +29,7 @@
             <td>{{ seller['phone'] }}</td>
             <td>{{ seller['province'] }}</td>
             <td>{{ seller['commission_percentage'] }}</td>
-            <td>{{ seller['join_date'].split(' ')[0] }}</td>
+            <td>{{ seller['join_date'].strftime('%Y-%m-%d') }}</td>
             <td>
                 <a href="{{ url_for('edit_seller', seller_id=seller['id']) }}" class="btn btn-secondary">Editar</a>
             </td>
