--- a/templates/sale_detail.html
+++ b/templates/sale_detail.html
@@ -10,11 +10,11 @@
     </div>
 
     <div class="detail-info">
-        <p><strong>Fecha de Sorteo:</strong> {{ invoice['raffle_date'] }}</p>
+        <p><strong>Fecha de Sorteo:</strong> {{ invoice['raffle_date'].strftime('%Y-%m-%d %H:%M') }}</p>
         
         <p><strong>Vendedor:</strong> {{ invoice['seller_name'] }}</p>
         <p><strong>Cliente:</strong> {{ invoice['client_name'] }} {{ invoice['client_last_name'] }}</p>
-        <p><strong>Fecha de Venta:</strong> {{ invoice['creation_date'] }}</p>
+        <p><strong>Fecha de Venta:</strong> {{ invoice['creation_date'].strftime('%Y-%m-%d %H:%M') }}</p>
     </div>
 
     <h3>Ítems de la Factura</h3>
