--- a/templates/my_commissions.html
+++ b/templates/my_commissions.html
@@ -25,7 +25,7 @@
     <tbody>
         {% for item in report_data %}
         <tr>
-            <td>Sorteo del {{ item.raffle_date.split(' ')[0] }}</td>
+            <td>Sorteo del {{ item.raffle_date.strftime('%Y-%m-%d') }}</td>
             <td>${{ '%.2f'|format(item.total_sales) }}</td>
             <td>${{ '%.2f'|format(item.commission_amount) }}</td>
             <td style="color: red;">${{ '%.2f'|format(item.total_winnings) }}</td>
