--- a/templates/raffle_results_form.html
+++ b/templates/raffle_results_form.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="form-container">
     <h2>Ingresar Resultados del Sorteo</h2>
-    <p><strong>Sorteo:</strong> {{ raffle['name'] or 'Sorteo del' }} {{ raffle['raffle_date'] }}</p>
+    <p><strong>Sorteo:</strong> {{ raffle['name'] or 'Sorteo del' }} {{ raffle['raffle_date'].strftime('%Y-%m-%d') }}</p>
     
     <form method="post">
         <div class="form-group">
