--- a/templates/clients.html
+++ b/templates/clients.html
@@ -9,6 +9,7 @@
     <a href="{{ url_for('create_client') }}" class="btn">Crear Nuevo Cliente</a>
 </div>
 
+<div class="table-responsive">
 <table>
     <thead>
         <tr>
@@ -43,6 +44,7 @@
         {% endfor %}
     </tbody>
 </table>
+</div>
 {% if session['user_role'] == 'admin' %}
 <a href="{{ url_for('admin_dashboard') }}" class="btn-back">Volver al Dashboard</a>
 {% else %}
